# uos

./: .gitignore  CONTRIBUTING.md  LICENSE  PUBLISHING.md  README.md  WHITEPAPER.md  pyproject.toml
benchmarks/: README.md  run.py
benchmarks/micro/: context_efficiency.py  coord_latency.py
docs/: architecture.md  design_principles.md  faq.md  tutorial.md
examples/: 01_hello_agent.py  02_multi_agent_fork.py  03_long_context_paging.py  04_capability_delegation.py  05_procedural_memory.py
spec/: capabilities.md  isa.md  semantics.md  syscalls.md
tests/: test_capabilities.py  test_ipc.py  test_kernel.py  test_mmu.py  test_replay.py
uos/: __init__.py
uos/drivers/: __init__.py  anthropic.py  base.py  local.py  mock.py  openai.py
uos/kernel/: __init__.py  capabilities.py  dispatch.py  ipc.py  mmu.py  scheduler.py  trace.py
uos/mm/: __init__.py  episodic.py  procedural.py  semantic.py  working.py
uos/proc/: __init__.py  lifecycle.py  pcb.py  procfs.py
uos/sdk/: __init__.py  agent.py  tools.py
