[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "uos"
version = "0.1.0"
description = "μOS — a kernel for LLM-native computing. The LLM is the CPU. Context is RAM. Tools are syscalls. Agents are processes."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "The μOS Authors" }]
keywords = ["llm", "agents", "operating-system", "kernel", "memory", "scheduler"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = []

[project.optional-dependencies]
anthropic = ["anthropic>=0.40.0"]
openai    = ["openai>=1.50.0"]
local     = ["httpx>=0.27.0"]
embed     = ["numpy>=1.24"]
dev       = ["pytest>=7", "ruff>=0.5"]
all       = ["anthropic>=0.40.0", "openai>=1.50.0", "httpx>=0.27.0", "numpy>=1.24"]

[project.urls]
Homepage = "https://github.com/your-org/uos"
Whitepaper = "https://github.com/your-org/uos/blob/main/WHITEPAPER.md"

[tool.hatch.build.targets.wheel]
packages = ["uos"]

[tool.ruff]
line-length = 100
target-version = "py310"
